# Novel-Factory-Multi-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
output/: chapter_01.md  chapter_01_20260405_201259_42428.md  chapter_01_20260407_112422_21724.md  chapter_02.md  chapter_02_20260405_201259_42428.md  chapter_02_20260407_112422_21724.md  chapter_03.md  chapter_03_20260405_201259_42428.md  chapter_03_20260407_112422_21724.md  full_novel.md  full_novel_20260405_201259_42428.md  full_novel_20260407_112422_21724.md
src/novel_factory/: graph.py  main.py  prompts.py  state.py
src/novel_factory/agents/: architect.py  editor.py  novelist.py  outliner.py  summarizer.py
